--- a/output/index.html
+++ b/output/index.html
@@ -1,4 +1,3 @@
-<h3>Index</h3>
 <ul>
 <li><a href='/vbic/keywords#accounting'>Accounting</a></li>
 <li><a href='/vbic/keywords#advertising'>Advertising</a></li>
@@ -7,14 +6,12 @@
 <li><a href='/vbic/keywords#annualreports'>Annual Reports</a></li>
 <li><a href='/vbic/keywords#associations'>Associations</a></li>
 <li><a href='/vbic/keywords#auditing'>Auditing</a></li>
-<li><a href='/vbic/keywords#bankloans'>Bank loans</a></li>
-<li><a href='/vbic/keywords#benefits'>Benefits</a></li>
+<li><a href='/vbic/keywords#bankloans'>Bank Loans</a></li>
 <li><a href='/vbic/keywords#benefitsandcompensation'>Benefits and Compensation</a></li>
 <li><a href='/vbic/keywords#bibliographicmanagement'>Bibliographic Management</a></li>
 <li><a href='/vbic/keywords#biography'>Biography</a></li>
 <li><a href='/vbic/keywords#bonds'>Bonds</a></li>
 <li><a href='/vbic/keywords#brands'>Brands</a></li>
-<li><a href='/vbic/keywords#businessethics'>Business Ethics</a></li>
 <li><a href='/vbic/keywords#businessfinancing'>Business Financing</a></li>
 <li><a href='/vbic/keywords#businessnews'>Business News</a></li>
 <li><a href='/vbic/keywords#businessopportunities'>Business Opportunities</a></li>
@@ -22,17 +19,13 @@
 <li><a href='/vbic/keywords#businessplans'>Business Plans</a></li>
 <li><a href='/vbic/keywords#capital'>Capital</a></li>
 <li><a href='/vbic/career'>Career</a></li>
-<li><a href='/vbic/career'>Career</a></li>
-<li><a href='/vbic/keywords#casestudy'>Case Study</a></li>
+<li><a href='/vbic/keywords#casestudies'>Case Studies</a></li>
 <li><a href='/vbic/keywords#citationdatabase'>Citation Database</a></li>
-<li><a href='/vbic/keywords#citationdatabase'>Citation database</a></li>
 <li><a href='/vbic/keywords#citations'>Citations</a></li>
 <li><a href='/vbic/keywords#companies'>Companies</a></li>
 <li><a href='/vbic/company'>Company</a></li>
 <li><a href='/vbic/keywords#companyprofiles'>Company Profiles</a></li>
 <li><a href='/vbic/keywords#companyresearch'>Company Research</a></li>
-<li><a href='/vbic/keywords#companyprofiles'>Company profiles</a></li>
-<li><a href='/vbic/keywords#companyresearch'>Company research</a></li>
 <li><a href='/vbic/keywords#compensation'>Compensation</a></li>
 <li><a href='/vbic/keywords#competitors'>Competitors</a></li>
 <li><a href='/vbic/keywords#consumeranalysis'>Consumer Analysis</a></li>
@@ -45,11 +38,10 @@
 <li><a href='/vbic/keywords#countrybackground'>Country Background</a></li>
 <li><a href='/vbic/keywords#countrydata'>Country Data</a></li>
 <li><a href='/vbic/country research'>Country Research</a></li>
-<li><a href='/vbic/country research'>Country Research</a></li>
 <li><a href='/vbic/keywords#culture'>Culture</a></li>
 <li><a href='/vbic/keywords#debt'>Debt</a></li>
 <li><a href='/vbic/keywords#decisiontheory'>Decision Theory</a></li>
-<li><a href='/vbic/demographics and statistics'>Demographics and Statistics</a></li>
+<li><a href='/vbic/keywords#demographics'>Demographics</a></li>
 <li><a href='/vbic/demographics and statistics'>Demographics and Statistics</a></li>
 <li><a href='/vbic/keywords#dictionaries'>Dictionaries</a></li>
 <li><a href='/vbic/keywords#directinvestment'>Direct Investment</a></li>
@@ -57,29 +49,24 @@
 <li><a href='/vbic/keywords#distributors'>Distributors</a></li>
 <li><a href='/vbic/keywords#doingbusinessin'>Doing Business In</a></li>
 <li><a href='/vbic/keywords#dowjonesindustrialaverage'>Dow Jones Industrial Average</a></li>
+<li><a href='/vbic/keywords#ebooks'>E-Books</a></li>
 <li><a href='/vbic/keywords#ecommerce'>E-Commerce</a></li>
-<li><a href='/vbic/keywords#ebooks'>Ebooks</a></li>
+<li><a href='/vbic/keywords#ejournals'>E-Journals</a></li>
 <li><a href='/vbic/keywords#econometrics'>Econometrics</a></li>
 <li><a href='/vbic/keywords#economicdatainternational'>Economic Data: International</a></li>
 <li><a href='/vbic/keywords#economicdataunitedstates'>Economic Data: United States</a></li>
 <li><a href='/vbic/keywords#economicforecasting'>Economic Forecasting</a></li>
 <li><a href='/vbic/keywords#economicindex'>Economic Index</a></li>
 <li><a href='/vbic/keywords#economicindicators'>Economic Indicators</a></li>
-<li><a href='/vbic/keywords#economicdataunitedstates'>Economic data: United States</a></li>
 <li><a href='/vbic/economics'>Economics</a></li>
-<li><a href='/vbic/economics'>Economics</a></li>
-<li><a href='/vbic/keywords#ejournals'>Ejournals</a></li>
 <li><a href='/vbic/keywords#employment'>Employment</a></li>
 <li><a href='/vbic/keywords#encyclopedia'>Encyclopedia</a></li>
-<li><a href='/vbic/keywords#entrepreneurship'>Entrepreneurship</a></li>
-<li><a href='/vbic/keywords#entrepreneurshipresearch'>Entrepreneurship Research</a></li>
+<li><a href='/vbic/entrepreneurship'>Entrepreneurship</a></li>
 <li><a href='/vbic/keywords#environmentaleconomics'>Environmental Economics</a></li>
+<li><a href='/vbic/keywords#ethics'>Ethics</a></li>
 <li><a href='/vbic/keywords#export'>Export</a></li>
 <li><a href='/vbic/keywords#federalgovernment'>Federal Government</a></li>
-<li><a href='/vbic/keywords#finance'>Finance</a></li>
 <li><a href='/vbic/finance &amp; investment'>Finance &amp; Investment</a></li>
-<li><a href='/vbic/finance &amp; investment'>Finance &amp; Investment</a></li>
-<li><a href='/vbic/keywords#financeandinvestment'>Finance and Investment</a></li>
 <li><a href='/vbic/keywords#financialanalysis'>Financial Analysis</a></li>
 <li><a href='/vbic/keywords#financialinformation'>Financial Information</a></li>
 <li><a href='/vbic/keywords#financialnews'>Financial News</a></li>
@@ -97,22 +84,19 @@
 <li><a href='/vbic/keywords#grossnationalproduct'>Gross National Product</a></li>
 <li><a href='/vbic/keywords#housingdata'>Housing Data</a></li>
 <li><a href='/vbic/keywords#humanresourcemanagement'>Human Resource Management</a></li>
-<li><a href='/vbic/keywords#humanresourcemanagement'>Human Resource management</a></li>
 <li><a href='/vbic/keywords#import'>Import</a></li>
-<li><a href='/vbic/industry'>Industry</a></li>
 <li><a href='/vbic/industry'>Industry</a></li>
 <li><a href='/vbic/keywords#industryanalysismodels'>Industry Analysis Models</a></li>
 <li><a href='/vbic/keywords#industryclassification'>Industry Classification</a></li>
 <li><a href='/vbic/keywords#industryoverview'>Industry Overview</a></li>
 <li><a href='/vbic/keywords#industryratios'>Industry Ratios</a></li>
-<li><a href='/vbic/keywords#industryresearch'>Industry Research</a></li>
 <li><a href='/vbic/keywords#industrytrends'>Industry Trends</a></li>
 <li><a href='/vbic/keywords#internationalaffairs'>International Affairs</a></li>
 <li><a href='/vbic/keywords#internationalbusiness'>International Business</a></li>
 <li><a href='/vbic/keywords#internationallaw'>International Law</a></li>
 <li><a href='/vbic/keywords#internationaltrade'>International Trade</a></li>
-<li><a href='/vbic/keywords#investment'>Investment</a></li>
 <li><a href='/vbic/keywords#investmentandsecurities'>Investment and Securities</a></li>
+<li><a href='/vbic/keywords#investments'>Investments</a></li>
 <li><a href='/vbic/keywords#jobs'>Jobs</a></li>
 <li><a href='/vbic/keywords#laboreconomics'>Labor Economics</a></li>
 <li><a href='/vbic/keywords#laborrelations'>Labor Relations</a></li>
@@ -121,19 +105,15 @@
 <li><a href='/vbic/keywords#legislativehistory'>Legislative History</a></li>
 <li><a href='/vbic/keywords#lifestyles'>Lifestyles</a></li>
 <li><a href='/vbic/logistics'>Logistics</a></li>
-<li><a href='/vbic/logistics'>Logistics</a></li>
 <li><a href='/vbic/keywords#management'>Management</a></li>
-<li><a href='/vbic/keywords#managementandinvestment'>Management and Investment </a></li>
 <li><a href='/vbic/keywords#manufacturing'>Manufacturing</a></li>
 <li><a href='/vbic/keywords#marketshare'>Market Share</a></li>
 <li><a href='/vbic/keywords#marketsize'>Market Size</a></li>
-<li><a href='/vbic/marketing'>Marketing</a></li>
 <li><a href='/vbic/marketing'>Marketing</a></li>
 <li><a href='/vbic/keywords#marketingplans'>Marketing Plans</a></li>
 <li><a href='/vbic/keywords#masterstheses'>Master's Theses</a></li>
 <li><a href='/vbic/keywords#mergersandacquisitions'>Mergers and Acquisitions</a></li>
 <li><a href='/vbic/keywords#mutualfunds'>Mutual Funds</a></li>
-<li><a href='/vbic/keywords#naics'>NAICS</a></li>
 <li><a href='/vbic/keywords#naicscode'>NAICS Code</a></li>
 <li><a href='/vbic/keywords#news'>News</a></li>
 <li><a href='/vbic/keywords#nonprofits'>Nonprofits</a></li>
@@ -146,13 +126,12 @@
 <li><a href='/vbic/keywords#planningandstrategies'>Planning and Strategies</a></li>
 <li><a href='/vbic/keywords#polls'>Polls</a></li>
 <li><a href='/vbic/keywords#population'>Population</a></li>
-<li><a href='/vbic/keywords#populationandhousingdata'>Population and Housing Data</a></li>
 <li><a href='/vbic/keywords#ports'>Ports</a></li>
+<li><a href='/vbic/product'>Product</a></li>
 <li><a href='/vbic/keywords#productcodes'>Product Codes</a></li>
 <li><a href='/vbic/keywords#productdevelopment'>Product Development</a></li>
 <li><a href='/vbic/keywords#promotion'>Promotion</a></li>
 <li><a href='/vbic/keywords#publicpolicy'>Public Policy</a></li>
-<li><a href='/vbic/keywords#publicpolicystatistics'>Public Policy Statistics</a></li>
 <li><a href='/vbic/keywords#publicrelations'>Public Relations</a></li>
 <li><a href='/vbic/keywords#qualitycontrol'>Quality Control</a></li>
 <li><a href='/vbic/keywords#rankings'>Rankings</a></li>
