--- a/output/res-by-title.html
+++ b/output/res-by-title.html
@@ -34,7 +34,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://arjournals.annualreviews.org/loi/Economics'>Annual Review of Economics</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://arjournals.annualreviews.org/loi/resource'>Annual Review of Resource Economics</a></li>
 <li><a href='http://www.ashoka.org/home/index.cfm'>Ashoka</a></li>
-<li><a href='http://wrds.wharton.upenn.edu'>AuditAnalytics (Access via WRDS.)</a></li>
+<li><a href='http://wrds.wharton.upenn.edu'>AuditAnalytics</a></li>
 </ul>
 <h3 id='B'>B</h3> [<a href='#'>back to top</a>]
 <ul>
@@ -64,7 +64,7 @@
 <li><a href='http://www.transparency.org/country'>Corruption by Country/Territory (Transparency International)</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://go.worldbank.org/N45X2XWIC0'>Country at a Glance Tables</a></li>
 <li><a href='http://www.buyusainfo.net/adsearch.cfm?search_type=int&loadnav=no'>Country Commercial Guides</a></li>
-<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.prsgroup.com/prsgroup_shoppingcart/cdSub4.aspx'>Country Data(PRS)</a></li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.prsgroup.com/prsgroup_shoppingcart/cdSub4.aspx'>Country Data (PRS)</a></li>
 <li><a href='http://lcweb2.loc.gov/frd/cs/cshome.html'>Country Studies</a></li>
 <li><a href='http://www.census.gov/econ/cbp/index.html'>County Business Patterns (CPB)</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://library2.cqpress.com/cqresearcher'>CQ Researcher</a></li>
@@ -183,8 +183,8 @@
 <li><a href='http://www.research.fsu.edu/techtransfer/documents/mnei.pdf'>Metropolitan New Economy Index</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://academic.mintel.com/sinatra/oxygen_academic/academic_logon/'>Mintel</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://library.morningstar.com/'>Morningstar</a></li>
-<li><a href=''>Morningstar Direct (Access available in Van Munching Hall Finance Labs and via SmithApps)</a></li>
-<li><a href=''>Morningstar EnCorr (Access available in Van Munching Hall Financial Labs and via SmithApps)</a></li>
+<li><a href=''>Morningstar Direct</a></li>
+<li><a href=''>Morningstar EnCorr</a></li>
 </ul>
 <h3 id='N'>N</h3> [<a href='#'>back to top</a>]
 <ul>
@@ -252,7 +252,7 @@
 <li><a href='http://www.census.gov/sdc/'>State Data Centers</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.census.gov/compendia/statab/'>Statistical Abstract of the United States</a></li>
 <li><a href='http://www.census.gov/mp/www/cat/foreign_trade/schedule_b_--_statistical_classification_of_domestic_and_foreign_commodities_exported_from_the_unite.html'>Statistical Classification of Domestic and Foreign Commodities Exported from the United States (Schedule B)</a></li>
-<li><a href=''>Statistical DataSets (ProQuest) – Replaced by Data-Planet Statistical Datasets.</a></li>
+<li><a href=''>Statistical DataSets (ProQuest) &mdash; Replaced by Data-Planet Statistical Datasets.</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.lexisnexis.com/statuniv'>Statistical Insight (ProQuest)</a></li>
 <li><a href='http://www.bls.gov/bls/other.htm'>Statistical Sites of the World Wide Web</a></li>
 </ul>
@@ -261,8 +261,8 @@
 <li><a href='http://www.taxpolicycenter.org/'>Tax Policy Center</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://infotrac.galegroup.com/itweb/umd_um?db=TERC'>Testing and Education Reference Center</a></li>
 <li><a href='http://www.thomasnet.com/'>ThomasNet</a></li>
-<li><a href=''>Thomson Reuters Eikon (Access available only in Van Munching Hall Financial Markets Labs (Rooms 1318 and 3505)</a></li>
-<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Thomson Reuters SDC Platinum (Access via SmithApps)</a></li>
+<li><a href=''>Thomson Reuters Eikon</a></li>
+<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Thomson Reuters SDC Platinum</a></li>
 <li><a href=''>Thomson Reuters LPC DealScan</a></li>
 <li><a href=''>Thomson Reuters Institutional Holdings (13F)</a></li>
 <li><a href=''>Thomson Reuters Insider Filing Data Feed</a></li>
@@ -286,9 +286,9 @@
 </ul>
 <h3 id='W'>W</h3> [<a href='#'>back to top</a>]
 <ul>
-<li><a href='http://web.utk.edu/~jwachowi/wacho_world.html'>Wachowicz's Web World- Websites for Discerning Finance Students</a></li>
+<li><a href='http://web.utk.edu/~jwachowi/wacho_world.html'>Wachowicz's Web World: Websites for Discerning Finance Students</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://global.factiva.com/en/sess/login.asp?xsid=S003Wvf1WFo5DEs5DEmM9YuNTAvODFyMHmnRsIuMcNG1pRRQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQQAA'>Wall Street Journal (Factiva)</a></li>
-<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.proquest.com/wallstreetjournal/advanced?accountid=14696'>Wall Street Journal – National Newspapers Core (Proquest)</a></li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.proquest.com/wallstreetjournal/advanced?accountid=14696'>Wall Street Journal, National Newspapers Core (Proquest)</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.proquest.com/hnpwallstreetjournal/advanced?accountid=14696'>Wall Street Journal Historical (1889-1991)</a></li>
 <li><a href='http://online.wsj.com/public/page/news-small-business-franchising.html'>Wall Street Journal Interactive Edition: Franchising</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://webofknowledge.com/WOS'>Web of Science</a></li>
