--- a/output/summary_cats.html
+++ b/output/summary_cats.html
@@ -31,6 +31,10 @@
 <li>IBIS World = 4</li>
 <li>Annual Review of Economics = 5</li>
 </ul>
+<h2>Entrepreneurship</h2>
+<ul>
+<li>Small Business Administration = 1</li>
+</ul>
 <h2>Finance &amp; Investment</h2>
 <ul>
 <li>Bloomberg = 1</li>
@@ -56,4 +60,9 @@
 <h2>Marketing</h2>
 <ul>
 <li>IBIS World = 1</li>
+</ul>
+<h2>Product</h2>
+<ul>
+<li>Business Source Complete = 1</li>
+<li>RDS Business Reference Suite = 2</li>
 </ul>
