--- a/output/Pro.html
+++ b/output/Pro.html
@@ -1,7 +1,6 @@
-<a href='vbic/keywords#p'>p</a><br />
-<a href='vbic/keywords#r'>r</a><br />
-<a href='vbic/keywords#o'>o</a><br />
-<a href='vbic/keywords#d'>d</a><br />
-<a href='vbic/keywords#u'>u</a><br />
-<a href='vbic/keywords#c'>c</a><br />
-<a href='vbic/keywords#t'>t</a><br />
+
+<p><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip&group=main&profile=ehost&defaultdb=bth'>Business Source Complete</a></p>
+<p>Comprehensive database of business sources - includes over 3600 peer reviewed journals, trade publications/ magazines, books, case studies, Company profiles, SWOT analysis etc.</p>
+
+<p><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.rdsinc.com/texis/rds/sessions?userid=umd&Products=BNI,TBL,BMP'>RDS Business Reference Suite</a></p>
+<p>Provides access to three important databases: RDS Business and Industry (covers Industry trade journals, magazines and newspapers); RDS Business and Management Practices (covers journals and magazines dealing with business and management issues) and RDS Tablebase (provides business statistics, i.e., market share, market size, advertising expenditures, etc.).</p>
