--- a/output/summary_keys.html
+++ b/output/summary_keys.html
@@ -5,7 +5,7 @@
 <li>LexisNexis Academic = 2</li>
 <li>Bloomberg = 3</li>
 <li>Datastream Advance - Access via SmithApps = 4</li>
-<li>AuditAnalytics (Access via WRDS.) = 99</li>
+<li>AuditAnalytics = 99</li>
 <li>Encyclopedia of Business and Finance = 99</li>
 </ul>
 <h3>Advertising</h3>
@@ -24,7 +24,7 @@
 <li>Morningstar = 1</li>
 <li>ValueLine (ValueLine Investment Survey) = 2</li>
 <li>RDS Business Reference Suite = 3</li>
-<li>Morningstar Direct (Access available in Van Munching Hall Finance Labs and via SmithApps) = 99</li>
+<li>Morningstar Direct = 99</li>
 </ul>
 <h3>Annual Reports</h3>
 <ul>
@@ -44,20 +44,17 @@
 <li>RIA Checkpoint = 1</li>
 <li>Factiva = 2</li>
 <li>Business Source Complete = 3</li>
-<li>AuditAnalytics (Access via WRDS.) = 99</li>
+<li>AuditAnalytics = 99</li>
 </ul>
-<h3>Bank loans</h3>
+<h3>Bank Loans</h3>
 <ul>
 <li>Thomson Reuters LPC DealScan = 99</li>
-</ul>
-<h3>Benefits</h3>
-<ul>
-<li>CQ Researcher = 99</li>
 </ul>
 <h3>Benefits and Compensation</h3>
 <ul>
 <li>Business Source Complete = 1</li>
 <li>Factiva = 2</li>
+<li>CQ Researcher = 99</li>
 </ul>
 <h3>Bibliographic Management</h3>
 <ul>
@@ -86,22 +83,13 @@
 <li>Factiva = 2</li>
 <li>PsycInfo = 99</li>
 </ul>
-<h3>Business Ethics</h3>
-<ul>
-<li>Academic Search Premier = 99</li>
-<li>Business Source Complete = 99</li>
-<li>Corruption by Country/Territory (Transparency International) = 99</li>
-<li>CQ Researcher = 99</li>
-<li>CREDO = 99</li>
-<li>Factiva = 99</li>
-</ul>
 <h3>Business Financing</h3>
 <ul>
 <li>PricewaterhouseCoopers - MoneyTree Report = 99</li>
 </ul>
 <h3>Business News</h3>
 <ul>
-<li>Thomson Reuters Eikon (Access available only in Van Munching Hall Financial Markets Labs (Rooms 1318 and 3505) = 99</li>
+<li>Thomson Reuters Eikon = 99</li>
 </ul>
 <h3>Business Opportunities</h3>
 <ul>
@@ -126,7 +114,7 @@
 </ul>
 <h3>Capital</h3>
 <ul>
-<li>Wachowicz's Web World- Websites for Discerning Finance Students = 99</li>
+<li>Wachowicz's Web World: Websites for Discerning Finance Students = 99</li>
 </ul>
 <h3>Career</h3>
 <ul>
@@ -135,7 +123,7 @@
 <li>Testing and Education Reference Center = 99</li>
 <li>Volunteer Today = 99</li>
 </ul>
-<h3>Case Study</h3>
+<h3>Case Studies</h3>
 <ul>
 <li>Business Source Complete = 99</li>
 </ul>
@@ -143,9 +131,6 @@
 <ul>
 <li>Science Citation Index Expanded - Web of Science = 99</li>
 <li>Social Science Citation Index - Web of Science = 99</li>
-</ul>
-<h3>Citation database</h3>
-<ul>
 <li>Web of Science = 99</li>
 </ul>
 <h3>Citations</h3>
@@ -166,21 +151,15 @@
 <li>RDS Business Reference Suite = 7</li>
 <li>Mergent Online - Access via SmithApps = 99</li>
 <li>Mergent WebReports- Access via SmithApps = 99</li>
+<li>Morningstar Direct = 99</li>
 </ul>
 <h3>Company Research</h3>
 <ul>
 <li>LexisNexis Academic = 99</li>
 <li>Morningstar = 99</li>
-<li>Morningstar Direct (Access available in Van Munching Hall Finance Labs and via SmithApps) = 99</li>
-<li>Wall Street Journal (Factiva) = 99</li>
-</ul>
-<h3>Company profiles</h3>
-<ul>
-<li>Morningstar Direct (Access available in Van Munching Hall Finance Labs and via SmithApps) = 99</li>
-</ul>
-<h3>Company research</h3>
-<ul>
+<li>Morningstar Direct = 99</li>
 <li>S&amp;P Capital IQ (Access available on PCs in Van Munching Hall, Room 1318, and Smith School DC, Baltimore and Shady Grove campuses. = 99</li>
+<li>Wall Street Journal (Factiva) = 99</li>
 </ul>
 <h3>Compensation</h3>
 <ul>
@@ -248,7 +227,7 @@
 <li>Enterprise Surveys = 6</li>
 <li>One World - Nations Online = 7</li>
 <li>CIA World Factbook = 99</li>
-<li>Country Data(PRS) = 99</li>
+<li>Country Data (PRS) = 99</li>
 <li>EIU Country Commerce = 99</li>
 <li>Everything International = 99</li>
 <li>Global Development Finance = 99</li>
@@ -310,7 +289,7 @@
 <li>Google Scholar = 99</li>
 <li>JSTOR = 99</li>
 </ul>
-<h3>Demographics and Statistics</h3>
+<h3>Demographics</h3>
 <ul>
 <li>Regional Economic Conditions (RECON) = 1</li>
 <li>Balance of Payments Statistics &mdash; IMF eLibrary &mdash; Data = 99</li>
@@ -359,7 +338,7 @@
 <li>Coface: Country Risk and Economic Research = 99</li>
 <li>Corruption by Country/Territory (Transparency International) = 99</li>
 <li>Country at a Glance Tables = 99</li>
-<li>Country Data(PRS) = 99</li>
+<li>Country Data (PRS) = 99</li>
 <li>Country Studies = 99</li>
 <li>Enterprise Surveys = 99</li>
 <li>Everything International = 99</li>
@@ -379,11 +358,15 @@
 <li>Datastream Advance - Access via SmithApps = 3</li>
 <li>WRDS (Wharton Research Data Service) = 4</li>
 </ul>
+<h3>E-Books</h3>
+<ul>
+<li>Springer eBooks (2005-2011) = 99</li>
+</ul>
 <h3>E-Commerce</h3>
 <ul>
 <li>Encyclopedia of E-Commerce = 99</li>
 </ul>
-<h3>Ebooks</h3>
+<h3>E-Journals</h3>
 <ul>
 <li>Springer eBooks (2005-2011) = 99</li>
 </ul>
@@ -400,6 +383,7 @@
 </ul>
 <h3>Economic Data: United States</h3>
 <ul>
+<li>FRB Beige Book = 99</li>
 <li>IHS Global Insight DataInsight Web = 99</li>
 <li>RFE: Resources for Economists on the Internet = 99</li>
 </ul>
@@ -432,10 +416,6 @@
 <li>World Development Indicators = 99</li>
 <li>World Economic Outlook = 99</li>
 <li>World Bank Data Catalog = 99</li>
-</ul>
-<h3>Economic data: United States</h3>
-<ul>
-<li>FRB Beige Book = 99</li>
 </ul>
 <h3>Economics</h3>
 <ul>
@@ -477,10 +457,6 @@
 <li>RFE: Resources for Economists on the Internet = 99</li>
 <li>U.S. Census Bureau = 99</li>
 </ul>
-<h3>Ejournals</h3>
-<ul>
-<li>Springer eBooks (2005-2011) = 99</li>
-</ul>
 <h3>Employment</h3>
 <ul>
 <li>Business Source Complete = 1</li>
@@ -519,15 +495,21 @@
 <li>Encyclopedia of Small Business = 99</li>
 <li>FindLaw Small Business Center = 99</li>
 <li>Franchise Direct = 99</li>
-<li>Small Business Administration = 99</li>
-</ul>
-<h3>Entrepreneurship Research</h3>
-<ul>
 <li>Schwab Foundation for Social Entrepreneurship = 99</li>
+<li>Small Business Administration = 99</li>
 </ul>
 <h3>Environmental Economics</h3>
 <ul>
 <li>Annual Review of Resource Economics = 99</li>
+</ul>
+<h3>Ethics</h3>
+<ul>
+<li>Academic Search Premier = 99</li>
+<li>Business Source Complete = 99</li>
+<li>Corruption by Country/Territory (Transparency International) = 99</li>
+<li>CQ Researcher = 99</li>
+<li>CREDO = 99</li>
+<li>Factiva = 99</li>
 </ul>
 <h3>Export</h3>
 <ul>
@@ -545,31 +527,25 @@
 <ul>
 <li>Fedstats = 99</li>
 </ul>
-<h3>Finance</h3>
-<ul>
-<li>Morningstar = 99</li>
-<li>Morningstar Direct (Access available in Van Munching Hall Finance Labs and via SmithApps) = 99</li>
-<li>Morningstar EnCorr (Access available in Van Munching Hall Financial Labs and via SmithApps) = 99</li>
-<li>Standard &amp; Poor's Net Advantage = 99</li>
-</ul>
 <h3>Finance &amp; Investment</h3>
 <ul>
 <li>Encyclopedia of Business and Finance = 1</li>
+<li>Morningstar = 99</li>
+<li>Morningstar Direct = 99</li>
+<li>Morningstar EnCorr = 99</li>
 <li>S&amp;P Capital IQ (Access available on PCs in Van Munching Hall, Room 1318, and Smith School DC, Baltimore and Shady Grove campuses. = 99</li>
-<li>Thomson Reuters Eikon (Access available only in Van Munching Hall Financial Markets Labs (Rooms 1318 and 3505) = 99</li>
-<li>Thomson Reuters SDC Platinum (Access via SmithApps) = 99</li>
+<li>Standard &amp; Poor's Net Advantage = 99</li>
+<li>Thomson Reuters Eikon = 99</li>
+<li>Thomson Reuters SDC Platinum = 99</li>
 <li>Thomson Reuters LPC DealScan = 99</li>
 <li>Thomson Reuters Institutional Holdings (13F) = 99</li>
 <li>Thomson Reuters Insider Filing Data Feed = 99</li>
 <li>Thomson Reuters Mutual Fund Holdings = 99</li>
-</ul>
-<h3>Finance and Investment</h3>
-<ul>
 <li>Wall Street Journal (Factiva) = 99</li>
 </ul>
 <h3>Financial Analysis</h3>
 <ul>
-<li>Wachowicz's Web World- Websites for Discerning Finance Students = 99</li>
+<li>Wachowicz's Web World: Websites for Discerning Finance Students = 99</li>
 </ul>
 <h3>Financial Information</h3>
 <ul>
@@ -585,21 +561,21 @@
 <li>IHS Global Insight DataInsight Web = 99</li>
 <li>Institute for the Study of Security Markets (ISSM) = 99</li>
 <li>Standard &amp; Poor's = 99</li>
-<li>Thomson Reuters Eikon (Access available only in Van Munching Hall Financial Markets Labs (Rooms 1318 and 3505) = 99</li>
-<li>Thomson Reuters SDC Platinum (Access via SmithApps) = 99</li>
+<li>Thomson Reuters Eikon = 99</li>
+<li>Thomson Reuters SDC Platinum = 99</li>
 <li>Thomson Reuters Institutional Holdings (13F) = 99</li>
 <li>Thomson Reuters Insider Filing Data Feed = 99</li>
 <li>Thomson Reuters Mutual Fund Holdings = 99</li>
 <li>ValueLine (ValueLine Investment Survey) = 99</li>
-<li>Wachowicz's Web World- Websites for Discerning Finance Students = 99</li>
+<li>Wachowicz's Web World: Websites for Discerning Finance Students = 99</li>
 <li>Wall Street Journal (Factiva) = 99</li>
-<li>Wall Street Journal – National Newspapers Core (Proquest) = 99</li>
+<li>Wall Street Journal, National Newspapers Core (Proquest) = 99</li>
 <li>Wall Street Journal Historical (1889-1991) = 99</li>
 <li>WRDS SEC Analytics Suite = 99</li>
 </ul>
 <h3>Financial News</h3>
 <ul>
-<li>Thomson Reuters Eikon (Access available only in Van Munching Hall Financial Markets Labs (Rooms 1318 and 3505) = 99</li>
+<li>Thomson Reuters Eikon = 99</li>
 </ul>
 <h3>Foreign Direct Investment</h3>
 <ul>
@@ -670,20 +646,18 @@
 </ul>
 <h3>Housing Data</h3>
 <ul>
+<li>American FactFinder = 99</li>
 <li>Population and Household = 99</li>
 </ul>
 <h3>Human Resource Management</h3>
 <ul>
 <li>RDS Business Reference Suite = 1</li>
 <li>Business Source Complete = 2</li>
+<li>Encyclopedia of Small Business = 99</li>
 <li>Google Scholar = 99</li>
 <li>JSTOR = 99</li>
 <li>Porter's Five Forces: Assessing the Balance of in a Business Situation = 99</li>
 <li>PsycInfo = 99</li>
-</ul>
-<h3>Human Resource management</h3>
-<ul>
-<li>Encyclopedia of Small Business = 99</li>
 </ul>
 <h3>Import</h3>
 <ul>
@@ -700,7 +674,12 @@
 <li>Mergent WebReports- Access via SmithApps = 99</li>
 <li>Overview of BLS Statistics by Industry = 99</li>
 <li>Passport = 99</li>
+<li>Porter's Five Forces: Assessing the Balance of in a Business Situation = 99</li>
+<li>RDS Business Reference Suite = 99</li>
 <li>Regional Economic Conditions (RECON) = 99</li>
+<li>Standard &amp; Poor's Net Advantage = 99</li>
+<li>Standard Industrial Classification System (SIC) = 99</li>
+<li>Wall Street Journal (Factiva) = 99</li>
 </ul>
 <h3>Industry Analysis Models</h3>
 <ul>
@@ -734,14 +713,6 @@
 <li>WRDS (Wharton Research Data Service) = 5</li>
 <li>CRSP: Center for Research in Security Prices (Access via SmithApps - CRSPSift) = 99</li>
 </ul>
-<h3>Industry Research</h3>
-<ul>
-<li>Porter's Five Forces: Assessing the Balance of in a Business Situation = 99</li>
-<li>RDS Business Reference Suite = 99</li>
-<li>Standard &amp; Poor's Net Advantage = 99</li>
-<li>Standard Industrial Classification System (SIC) = 99</li>
-<li>Wall Street Journal (Factiva) = 99</li>
-</ul>
 <h3>Industry Trends</h3>
 <ul>
 <li>IBIS World = 1</li>
@@ -769,7 +740,7 @@
 <li>Corruption by Country/Territory (Transparency International) = 99</li>
 <li>Country at a Glance Tables = 99</li>
 <li>Country Commercial Guides = 99</li>
-<li>Country Data(PRS) = 99</li>
+<li>Country Data (PRS) = 99</li>
 <li>Export.gov = 99</li>
 <li>Financial Times Historical Archive (1882-2006) = 99</li>
 <li>Global Development Finance = 99</li>
@@ -808,33 +779,32 @@
 <li>U.S. Trade Statistics = 99</li>
 <li>World Trade Organization - WTO = 99</li>
 </ul>
-<h3>Investment</h3>
+<h3>Investment and Securities</h3>
+<ul>
+<li>Datastream Advance - Access via SmithApps = 6</li>
+<li>Big Charts = 99</li>
+<li>Standard &amp; Poor's = 99</li>
+</ul>
+<h3>Investments</h3>
 <ul>
 <li>Morningstar = 1</li>
+<li>ValueLine (ValueLine Investment Survey) = 2</li>
 <li>S&amp;P Capital IQ (Access available on PCs in Van Munching Hall, Room 1318, and Smith School DC, Baltimore and Shady Grove campuses. = 3</li>
 <li>RDS Business Reference Suite = 4</li>
 <li>Bloomberg = 5</li>
+<li>Institute for the Study of Security Markets (ISSM) = 7</li>
 <li>WRDS (Wharton Research Data Service) = 8</li>
 <li>Mergent Online - Access via SmithApps = 99</li>
 <li>Mergent WebReports- Access via SmithApps = 99</li>
-<li>Morningstar Direct (Access available in Van Munching Hall Finance Labs and via SmithApps) = 99</li>
-<li>Morningstar EnCorr (Access available in Van Munching Hall Financial Labs and via SmithApps) = 99</li>
+<li>Morningstar Direct = 99</li>
+<li>Morningstar EnCorr = 99</li>
 <li>OptionMetrics = 99</li>
 <li>Standard &amp; Poor's Net Advantage = 99</li>
-<li>Thomson Reuters Eikon (Access available only in Van Munching Hall Financial Markets Labs (Rooms 1318 and 3505) = 99</li>
+<li>Thomson Reuters Eikon = 99</li>
 <li>Thomson Reuters LPC DealScan = 99</li>
 <li>Thomson Reuters Institutional Holdings (13F) = 99</li>
 <li>Thomson Reuters Insider Filing Data Feed = 99</li>
-<li>Wachowicz's Web World- Websites for Discerning Finance Students = 99</li>
-</ul>
-<h3>Investment and Securities</h3>
-<ul>
-<li>ValueLine (ValueLine Investment Survey) = 2</li>
-<li>Datastream Advance - Access via SmithApps = 6</li>
-<li>Institute for the Study of Security Markets (ISSM) = 7</li>
-<li>Big Charts = 99</li>
-<li>Standard &amp; Poor's Net Advantage = 99</li>
-<li>Standard &amp; Poor's = 99</li>
+<li>Wachowicz's Web World: Websites for Discerning Finance Students = 99</li>
 </ul>
 <h3>Jobs</h3>
 <ul>
@@ -907,13 +877,10 @@
 <li>Business Source Complete = 1</li>
 <li>RDS Business Reference Suite = 2</li>
 <li>Academic Search Premier = 99</li>
+<li>Encyclopedia of Business and Finance = 99</li>
 <li>Google Scholar = 99</li>
 <li>JSTOR = 99</li>
 <li>PsycInfo = 99</li>
-</ul>
-<h3>Management and Investment </h3>
-<ul>
-<li>Encyclopedia of Business and Finance = 99</li>
 </ul>
 <h3>Manufacturing</h3>
 <ul>
@@ -959,7 +926,7 @@
 <li>Factiva = 3</li>
 <li>LexisNexis Academic = 4</li>
 <li>RDS Business Reference Suite = 5</li>
-<li>Thomson Reuters SDC Platinum (Access via SmithApps) = 6</li>
+<li>Thomson Reuters SDC Platinum = 6</li>
 <li>Datastream Advance - Access via SmithApps = 7</li>
 <li>WRDS (Wharton Research Data Service) = 8</li>
 </ul>
@@ -968,16 +935,13 @@
 <li>ValueLine (ValueLine Investment Survey) = 2</li>
 <li>CRSP: Center for Research in Security Prices (Access via SmithApps - CRSPSift) = 3</li>
 <li>Morningstar = 99</li>
-<li>Morningstar Direct (Access available in Van Munching Hall Finance Labs and via SmithApps) = 99</li>
-<li>Morningstar EnCorr (Access available in Van Munching Hall Financial Labs and via SmithApps) = 99</li>
+<li>Morningstar Direct = 99</li>
+<li>Morningstar EnCorr = 99</li>
 <li>Thomson Reuters Mutual Fund Holdings = 99</li>
-</ul>
-<h3>NAICS</h3>
-<ul>
-<li>Correspondence Tables Between SIC and NAICS = 99</li>
 </ul>
 <h3>NAICS Code</h3>
 <ul>
+<li>Correspondence Tables Between SIC and NAICS = 99</li>
 <li>North American Industry Classification System (NAICS) = 99</li>
 </ul>
 <h3>News</h3>
@@ -985,7 +949,7 @@
 <li>LexisNexis Academic = 1</li>
 <li>Factiva = 2</li>
 <li>Financial Times Historical Archive (1882-2006) = 3</li>
-<li>Wall Street Journal – National Newspapers Core (Proquest) = 4</li>
+<li>Wall Street Journal, National Newspapers Core (Proquest) = 4</li>
 <li>Wall Street Journal (Factiva) = 5</li>
 <li>Wall Street Journal Historical (1889-1991) = 6</li>
 <li>GlobalEdge = 7</li>
@@ -1000,7 +964,7 @@
 <li>Market Research Library = 99</li>
 <li>National Newspapers = 99</li>
 <li>Regional Business News (EBSCO) = 99</li>
-<li>Thomson Reuters Eikon (Access available only in Van Munching Hall Financial Markets Labs (Rooms 1318 and 3505) = 99</li>
+<li>Thomson Reuters Eikon = 99</li>
 </ul>
 <h3>Nonprofits</h3>
 <ul>
@@ -1061,11 +1025,8 @@
 </ul>
 <h3>Population</h3>
 <ul>
-<li>Population and Household = 99</li>
-</ul>
-<h3>Population and Housing Data</h3>
-<ul>
 <li>American FactFinder = 99</li>
+<li>Population and Household = 99</li>
 </ul>
 <h3>Ports</h3>
 <ul>
@@ -1089,13 +1050,10 @@
 </ul>
 <h3>Public Policy</h3>
 <ul>
+<li>Academic Search Premier = 99</li>
 <li>CIAO : Columbia International Affairs Online = 99</li>
 <li>National Bureau of Economic Research (NBER) = 99</li>
 <li>WWW Virtual Library: International Affairs Resources = 99</li>
-</ul>
-<h3>Public Policy Statistics</h3>
-<ul>
-<li>Academic Search Premier = 99</li>
 </ul>
 <h3>Public Relations</h3>
 <ul>
@@ -1147,7 +1105,7 @@
 </ul>
 <h3>Risk</h3>
 <ul>
-<li>Country Data(PRS) = 1</li>
+<li>Country Data (PRS) = 1</li>
 <li>Coface: Country Risk and Economic Research = 99</li>
 <li>IBIS World = 99</li>
 </ul>
@@ -1279,13 +1237,13 @@
 <li>WRDS (Wharton Research Data Service) = 8</li>
 <li>Big Charts = 99</li>
 <li>Institute for the Study of Security Markets (ISSM) = 99</li>
-<li>Morningstar Direct (Access available in Van Munching Hall Finance Labs and via SmithApps) = 99</li>
-<li>Morningstar EnCorr (Access available in Van Munching Hall Financial Labs and via SmithApps) = 99</li>
+<li>Morningstar Direct = 99</li>
+<li>Morningstar EnCorr = 99</li>
 <li>NASDAQ = 99</li>
 <li>NYSE - New York Stock Exchange = 99</li>
 <li>Standard &amp; Poor's Net Advantage = 99</li>
 <li>Standard &amp; Poor's = 99</li>
-<li>Thomson Reuters Eikon (Access available only in Van Munching Hall Financial Markets Labs (Rooms 1318 and 3505) = 99</li>
+<li>Thomson Reuters Eikon = 99</li>
 </ul>
 <h3>Surveys</h3>
 <ul>
