final revisions and cleanup

--- a/output/Car.html
+++ b/output/Car.html
@@ -1,3 +1,3 @@
-
-<p><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip&group=main&profile=ehost&defaultdb=bth'>Business Source Complete</a></p>
-<p>Comprehensive database of business sources - includes over 3600 peer reviewed journals, trade publications/ magazines, books, case studies, Company profiles, SWOT analysis etc.</p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip&group=main&profile=ehost&defaultdb=bth'>Business Source Complete</a></b></p>
+<div style='font-size: 90%'><p><em>Note: To access Company Profiles, click on link from the "More" option menu top of screen (in the blue band) to search for Company profiles by Company name.</em></p></div>
+<p>Comprehensive database of business sources &mdash; includes over 3600 peer reviewed journals, trade publications, magazines, books, case studies, Company profiles, SWOT analysis, etc.</p>
