--- a/output/ent.html
+++ b/output/ent.html
@@ -1,3 +1,2 @@
-
-<p><a href='http://www.sba.gov/'>Small Business Administration</a></p>
+<p><b><a href='http://www.sba.gov/'>Small Business Administration</a></b></p>
 <p>Small Business Administration information about how to start, finance, and manage small business</p>
