--- a/output/rel-pro.html
+++ b/output/rel-pro.html
@@ -3,6 +3,6 @@
 <li><a href='/vbic/keywords#brands'>Brands</a></li>
 <li><a href='/vbic/keywords#manufacturing'>Manufacturing</a></li>
 <li><a href='/vbic/keywords#patentsandtrademarks'>Patents and Trademarks</a></li>
-<li><a href='/vbic/keywords#productcodesglobal'>Product Codes (global)</a></li>
+<li><a href='/vbic/keywords#productcodes'>Product Codes</a></li>
 <li><a href='/vbic/keywords#productdevelopment'>Product Development</a></li>
 </ul>
