--- a/output/summary_keys.html
+++ b/output/summary_keys.html
@@ -4,7 +4,7 @@
 <li>RIA Checkpoint = 1</li>
 <li>LexisNexis Academic = 2</li>
 <li>Bloomberg = 3</li>
-<li>Datastream Advance - Access via SmithApps = 4</li>
+<li>Datastream Advance = 4</li>
 <li>AuditAnalytics = 99</li>
 <li>Encyclopedia of Business and Finance = 99</li>
 </ul>
@@ -31,9 +31,9 @@
 <li>Hoovers Online = 2</li>
 <li>LexisNexis Academic = 3</li>
 <li>Bloomberg = 4</li>
-<li>Datastream Advance - Access via SmithApps = 5</li>
+<li>Datastream Advance = 5</li>
 <li>EDGAR = 99</li>
-<li>Mergent WebReports- Access via SmithApps = 99</li>
+<li>Mergent WebReports = 99</li>
 </ul>
 <h3>Associations</h3>
 <ul>
@@ -72,7 +72,7 @@
 <h3>Bonds</h3>
 <ul>
 <li>Bloomberg = 1</li>
-<li>Datastream Advance - Access via SmithApps = 2</li>
+<li>Datastream Advance = 2</li>
 <li>Business Source Complete = 4</li>
 <li>Factiva = 5</li>
 <li>Standard &amp; Poor's = 99</li>
@@ -85,7 +85,7 @@
 </ul>
 <h3>Business Financing</h3>
 <ul>
-<li>PricewaterhouseCoopers - MoneyTree Report = 99</li>
+<li>PricewaterhouseCoopers: MoneyTree Report = 99</li>
 </ul>
 <h3>Business News</h3>
 <ul>
@@ -129,8 +129,8 @@
 </ul>
 <h3>Citation Database</h3>
 <ul>
-<li>Science Citation Index Expanded - Web of Science = 99</li>
-<li>Social Science Citation Index - Web of Science = 99</li>
+<li>Science Citation Index Expanded &ndash; Web of Science = 99</li>
+<li>Social Science Citation Index &ndash; Web of Science = 99</li>
 <li>Web of Science = 99</li>
 </ul>
 <h3>Citations</h3>
@@ -149,8 +149,8 @@
 <li>Morningstar = 5</li>
 <li>ValueLine (ValueLine Investment Survey) = 6</li>
 <li>RDS Business Reference Suite = 7</li>
-<li>Mergent Online - Access via SmithApps = 99</li>
-<li>Mergent WebReports- Access via SmithApps = 99</li>
+<li>Mergent Online = 99</li>
+<li>Mergent WebReports = 99</li>
 <li>Morningstar Direct = 99</li>
 </ul>
 <h3>Company Research</h3>
@@ -158,21 +158,21 @@
 <li>LexisNexis Academic = 99</li>
 <li>Morningstar = 99</li>
 <li>Morningstar Direct = 99</li>
-<li>S&amp;P Capital IQ (Access available on PCs in Van Munching Hall, Room 1318, and Smith School DC, Baltimore and Shady Grove campuses. = 99</li>
+<li>S&amp;P Capital IQ = 99</li>
 <li>Wall Street Journal (Factiva) = 99</li>
 </ul>
 <h3>Compensation</h3>
 <ul>
 <li>CQ Researcher = 99</li>
-<li>S&amp;P ExecuComp (Access available in Van Munching Hall Financial Labs and via SmithApps) = 99</li>
+<li>S&amp;P ExecuComp = 99</li>
 </ul>
 <h3>Competitors</h3>
 <ul>
 <li>Hoovers Online = 1</li>
 <li>Factiva = 2</li>
 <li>IBIS World = 3</li>
-<li>Mergent Online - Access via SmithApps = 4</li>
-<li>Mergent WebReports- Access via SmithApps = 5</li>
+<li>Mergent Online = 4</li>
+<li>Mergent WebReports = 5</li>
 <li>Mintel = 6</li>
 <li>Business Source Complete = 7</li>
 <li>Porter's Five Forces: Assessing the Balance of in a Business Situation = 8</li>
@@ -225,7 +225,7 @@
 <li>Country Studies = 4</li>
 <li>Country Commercial Guides = 5</li>
 <li>Enterprise Surveys = 6</li>
-<li>One World - Nations Online = 7</li>
+<li>One World &ndash; Nations Online = 7</li>
 <li>CIA World Factbook = 99</li>
 <li>Country Data (PRS) = 99</li>
 <li>EIU Country Commerce = 99</li>
@@ -243,8 +243,8 @@
 <li>Joint External Debt Hub (JEDH) = 99</li>
 <li>LANIC = 99</li>
 <li>NationMaster.com = 99</li>
-<li>OffStats- Official Statistics on the Web = 99</li>
-<li>One World - Nations Online = 99</li>
+<li>OffStats &ndash; Official Statistics on the Web = 99</li>
+<li>One World &ndash; Nations Online = 99</li>
 <li>Quarterly External Debt Statistics (QEDS/SDDS/GDDS) = 99</li>
 </ul>
 <h3>Country Research</h3>
@@ -257,8 +257,8 @@
 <li>Market Research Library = 99</li>
 <li>Media Freedom: Freedom House - Nations in Transit - Country Reports = 99</li>
 <li>NationMaster.com = 99</li>
-<li>OffStats- Official Statistics on the Web = 99</li>
-<li>One World - Nations Online = 99</li>
+<li>OffStats &ndash; Official Statistics on the Web = 99</li>
+<li>One World &ndash; Nations Online = 99</li>
 <li>Oxford Encyclopedia of Economic History = 99</li>
 <li>Passport = 99</li>
 <li>RDS Business Reference Suite = 99</li>
@@ -281,7 +281,7 @@
 <li>Quarterly External Debt Statistics (QEDS/SDDS/GDDS) = 2</li>
 <li>Federal Reserve Economic Data (FRED) = 99</li>
 <li>Global Development Finance = 99</li>
-<li>Mergent Online - Access via SmithApps = 99</li>
+<li>Mergent Online = 99</li>
 </ul>
 <h3>Decision Theory</h3>
 <ul>
@@ -292,7 +292,7 @@
 <h3>Demographics</h3>
 <ul>
 <li>Regional Economic Conditions (RECON) = 1</li>
-<li>Balance of Payments Statistics &mdash; IMF eLibrary &mdash; Data = 99</li>
+<li>Balance of Payments Statistics &ndash; IMF eLibrary &ndash; Data = 99</li>
 <li>Data and Statistics: USA.gov = 99</li>
 <li>Data-Planet Statistical Datasets = 99</li>
 <li>Data-Planet Statistical Ready Reference = 99</li>
@@ -332,7 +332,7 @@
 <li>EIU Country Finance = 5</li>
 <li>GlobalEdge = 6</li>
 <li>Background Notes = 99</li>
-<li>Balance of Payments Statistics &mdash; IMF eLibrary &mdash; Data = 99</li>
+<li>Balance of Payments Statistics &ndash; IMF eLibrary &ndash; Data = 99</li>
 <li>Baseline Scenario.com = 99</li>
 <li>CIA World Factbook = 99</li>
 <li>Coface: Country Risk and Economic Research = 99</li>
@@ -355,7 +355,7 @@
 <ul>
 <li>Factiva = 1</li>
 <li>Bloomberg = 2</li>
-<li>Datastream Advance - Access via SmithApps = 3</li>
+<li>Datastream Advance = 3</li>
 <li>WRDS (Wharton Research Data Service) = 4</li>
 </ul>
 <h3>E-Books</h3>
@@ -403,7 +403,7 @@
 <li>FRB Beige Book = 4</li>
 <li>IBIS World = 5</li>
 <li>Bloomberg = 6</li>
-<li>Datastream Advance - Access via SmithApps = 7</li>
+<li>Datastream Advance = 7</li>
 <li>Enterprise Surveys = 8</li>
 <li>Global Insight (IHS) DataInsight Web = 9</li>
 <li>GlobalEdge = 10</li>
@@ -427,7 +427,7 @@
 <li>E-Stats: Measuring the Electronic Economy = 6</li>
 <li>Economic Census = 7</li>
 <li>EconLit = 8</li>
-<li>Economic and Financial Crisis - MSU LibGuide = 9</li>
+<li>Economic and Financial Crisis &ndash; MSU LibGuide = 9</li>
 <li>Federal Reserve Economic Data (FRED) = 10</li>
 <li>Global Economic Monitor (GEM) = 11</li>
 <li>International Comparison Program = 12</li>
@@ -438,7 +438,7 @@
 <li>Source OECD = 17</li>
 <li>U.S. Economy at a Glance: Perspectives from the U.S. Department of Commerce = 18</li>
 <li>Academic Search Premier = 99</li>
-<li>Balance of Payments Statistics &mdash; IMF eLibrary &mdash; Data = 99</li>
+<li>Balance of Payments Statistics &ndash; IMF eLibrary &ndash; Data = 99</li>
 <li>Baseline Scenario.com = 99</li>
 <li>Coface: Country Risk and Economic Research = 99</li>
 <li>CREDO = 99</li>
@@ -467,7 +467,7 @@
 <li>CREDO = 99</li>
 <li>FedBizOpps.gov (Federal Business Opportunities) = 99</li>
 <li>Federal Reserve Economic Data (FRED) = 99</li>
-<li>Fortune's 100 Best Companies to Work For (R) = 99</li>
+<li>Fortune's 100 Best Companies to Work For &reg; = 99</li>
 <li>FRB Beige Book = 99</li>
 <li>JSTOR = 99</li>
 <li>LexisNexis Academic = 99</li>
@@ -489,7 +489,7 @@
 <li>BPlans.com = 99</li>
 <li>Community Economic Development HotReport = 99</li>
 <li>County Business Patterns (CPB) = 99</li>
-<li>Economic and Financial Crisis - MSU LibGuide = 99</li>
+<li>Economic and Financial Crisis &ndash; MSU LibGuide = 99</li>
 <li>Economic Census = 99</li>
 <li>Economy at a Glance = 99</li>
 <li>Encyclopedia of Small Business = 99</li>
@@ -533,7 +533,7 @@
 <li>Morningstar = 99</li>
 <li>Morningstar Direct = 99</li>
 <li>Morningstar EnCorr = 99</li>
-<li>S&amp;P Capital IQ (Access available on PCs in Van Munching Hall, Room 1318, and Smith School DC, Baltimore and Shady Grove campuses. = 99</li>
+<li>S&amp;P Capital IQ = 99</li>
 <li>Standard &amp; Poor's Net Advantage = 99</li>
 <li>Thomson Reuters Eikon = 99</li>
 <li>Thomson Reuters SDC Platinum = 99</li>
@@ -552,10 +552,10 @@
 <li>EDGAR = 1</li>
 <li>Hoovers Online = 2</li>
 <li>D&amp;B Key Business Ratios = 3</li>
-<li>Datastream Advance - Access via SmithApps = 3</li>
+<li>Datastream Advance = 3</li>
 <li>Factiva = 4</li>
-<li>CRSP: Center for Research in Security Prices (Access via SmithApps - CRSPSift) = 6</li>
-<li>Mergent Online - Access via SmithApps = 8</li>
+<li>CRSP: Center for Research in Security Prices = 6</li>
+<li>Mergent Online = 8</li>
 <li>WRDS (Wharton Research Data Service) = 10</li>
 <li>Bloomberg = 99</li>
 <li>IHS Global Insight DataInsight Web = 99</li>
@@ -671,7 +671,7 @@
 <h3>Industry</h3>
 <ul>
 <li>Global Insight (IHS) DataInsight Web = 99</li>
-<li>Mergent WebReports- Access via SmithApps = 99</li>
+<li>Mergent WebReports = 99</li>
 <li>Overview of BLS Statistics by Industry = 99</li>
 <li>Passport = 99</li>
 <li>Porter's Five Forces: Assessing the Balance of in a Business Situation = 99</li>
@@ -701,17 +701,17 @@
 <li>IBIS World = 1</li>
 <li>Business Source Complete = 2</li>
 <li>Hoovers Online = 3</li>
-<li>Mergent WebReports- Access via SmithApps = 4</li>
+<li>Mergent WebReports = 4</li>
 <li>Gartner Group = 5</li>
 </ul>
 <h3>Industry Ratios</h3>
 <ul>
 <li>D&amp;B Key Business Ratios = 1</li>
-<li>Datastream Advance - Access via SmithApps = 1</li>
+<li>Datastream Advance = 1</li>
 <li>Factiva = 2</li>
 <li>Standard &amp; Poor's Net Advantage = 3</li>
 <li>WRDS (Wharton Research Data Service) = 5</li>
-<li>CRSP: Center for Research in Security Prices (Access via SmithApps - CRSPSift) = 99</li>
+<li>CRSP: Center for Research in Security Prices = 99</li>
 </ul>
 <h3>Industry Trends</h3>
 <ul>
@@ -750,8 +750,8 @@
 <li>Harmonized Tariff Schedule (HTF) Codes = 99</li>
 <li>Human Development Report = 99</li>
 <li>Kwintessential Country Profiles = 99</li>
-<li>Mergent WebReports- Access via SmithApps = 99</li>
-<li>S&amp;P Capital IQ (Access available on PCs in Van Munching Hall, Room 1318, and Smith School DC, Baltimore and Shady Grove campuses. = 99</li>
+<li>Mergent WebReports = 99</li>
+<li>S&amp;P Capital IQ = 99</li>
 <li>World Business Culture = 99</li>
 <li>World News Connection = 99</li>
 <li>World Trade Organization - WTO = 99</li>
@@ -781,7 +781,7 @@
 </ul>
 <h3>Investment and Securities</h3>
 <ul>
-<li>Datastream Advance - Access via SmithApps = 6</li>
+<li>Datastream Advance = 6</li>
 <li>Big Charts = 99</li>
 <li>Standard &amp; Poor's = 99</li>
 </ul>
@@ -789,13 +789,13 @@
 <ul>
 <li>Morningstar = 1</li>
 <li>ValueLine (ValueLine Investment Survey) = 2</li>
-<li>S&amp;P Capital IQ (Access available on PCs in Van Munching Hall, Room 1318, and Smith School DC, Baltimore and Shady Grove campuses. = 3</li>
+<li>S&amp;P Capital IQ = 3</li>
 <li>RDS Business Reference Suite = 4</li>
 <li>Bloomberg = 5</li>
 <li>Institute for the Study of Security Markets (ISSM) = 7</li>
 <li>WRDS (Wharton Research Data Service) = 8</li>
-<li>Mergent Online - Access via SmithApps = 99</li>
-<li>Mergent WebReports- Access via SmithApps = 99</li>
+<li>Mergent Online = 99</li>
+<li>Mergent WebReports = 99</li>
 <li>Morningstar Direct = 99</li>
 <li>Morningstar EnCorr = 99</li>
 <li>OptionMetrics = 99</li>
@@ -811,7 +811,7 @@
 <li>Idealist = 1</li>
 <li>Chronicle of Philanthropy = 99</li>
 <li>FedBizOpps.gov (Federal Business Opportunities) = 99</li>
-<li>Fortune's 100 Best Companies to Work For (R) = 99</li>
+<li>Fortune's 100 Best Companies to Work For &reg; = 99</li>
 <li>Hoovers Online = 99</li>
 <li>Occupational Outlook Handbook = 99</li>
 <li>U.S. Trade Statistics = 99</li>
@@ -868,7 +868,7 @@
 <ul>
 <li>Logistics Performance Index (LPI) = 1</li>
 <li>Academic Search Premier = 99</li>
-<li>PortFocus - Ports Harbours Marinas Worldwide = 99</li>
+<li>PortFocus: Ports Harbours Marinas Worldwide = 99</li>
 <li>RDS Business Reference Suite = 99</li>
 <li>TIDE'S Directory of Transportation Information = 99</li>
 </ul>
@@ -927,13 +927,13 @@
 <li>LexisNexis Academic = 4</li>
 <li>RDS Business Reference Suite = 5</li>
 <li>Thomson Reuters SDC Platinum = 6</li>
-<li>Datastream Advance - Access via SmithApps = 7</li>
+<li>Datastream Advance = 7</li>
 <li>WRDS (Wharton Research Data Service) = 8</li>
 </ul>
 <h3>Mutual Funds</h3>
 <ul>
 <li>ValueLine (ValueLine Investment Survey) = 2</li>
-<li>CRSP: Center for Research in Security Prices (Access via SmithApps - CRSPSift) = 3</li>
+<li>CRSP: Center for Research in Security Prices = 3</li>
 <li>Morningstar = 99</li>
 <li>Morningstar Direct = 99</li>
 <li>Morningstar EnCorr = 99</li>
@@ -1030,7 +1030,7 @@
 </ul>
 <h3>Ports</h3>
 <ul>
-<li>PortFocus - Ports Harbours Marinas Worldwide = 99</li>
+<li>PortFocus: Ports Harbours Marinas Worldwide = 99</li>
 </ul>
 <h3>Product Codes</h3>
 <ul>
@@ -1074,7 +1074,7 @@
 <li>Forbes Lists = 2</li>
 <li>GuideStar = 3</li>
 <li>Top U.S. Trading Partners = 4</li>
-<li>Fortune's 100 Best Companies to Work For (R) = 99</li>
+<li>Fortune's 100 Best Companies to Work For &reg; = 99</li>
 </ul>
 <h3>Regional News</h3>
 <ul>
@@ -1113,7 +1113,7 @@
 <ul>
 <li>Factiva = 1</li>
 <li>Bloomberg = 2</li>
-<li>Datastream Advance - Access via SmithApps = 3</li>
+<li>Datastream Advance = 3</li>
 <li>WRDS (Wharton Research Data Service) = 4</li>
 <li>EconLit = 5</li>
 </ul>
@@ -1162,12 +1162,12 @@
 <li>International Financial Statistics = 4</li>
 <li>Information and Communication Technologies (ICT) At-A-Glance Tables = 5</li>
 <li>NationMaster.com = 6</li>
-<li>OffStats- Official Statistics on the Web = 7</li>
+<li>OffStats &ndash; Official Statistics on the Web = 7</li>
 <li>Source OECD = 8</li>
 <li>World Bank Data Catalog = 9</li>
 <li>World Development Indicators = 10</li>
 <li>World Investment Report = 11</li>
-<li>Balance of Payments Statistics &mdash; IMF eLibrary &mdash; Data = 99</li>
+<li>Balance of Payments Statistics &ndash; IMF eLibrary &ndash; Data = 99</li>
 <li>Data-Planet Statistical Datasets = 99</li>
 <li>Data-Planet Statistical Ready Reference = 99</li>
 <li>Enterprise Surveys = 99</li>
@@ -1177,7 +1177,7 @@
 <li>Human Development Report = 99</li>
 <li>International Comparison Program = 99</li>
 <li>Joint External Debt Hub (JEDH) = 99</li>
-<li>One World - Nations Online = 99</li>
+<li>One World &ndash; Nations Online = 99</li>
 <li>Passport = 99</li>
 <li>Quarterly External Debt Statistics (QEDS/SDDS/GDDS) = 99</li>
 <li>Statistical Insight (ProQuest) = 99</li>
@@ -1218,11 +1218,11 @@
 <h3>Stock Exchange</h3>
 <ul>
 <li>NASDAQ = 1</li>
-<li>NYSE - New York Stock Exchange = 2</li>
-<li>CRSP: Center for Research in Security Prices (Access via SmithApps - CRSPSift) = 3</li>
+<li>NYSE &ndash; New York Stock Exchange = 2</li>
+<li>CRSP: Center for Research in Security Prices = 3</li>
 <li>Bloomberg = 4</li>
 <li>Institute for the Study of Security Markets (ISSM) = 5</li>
-<li>Datastream Advance - Access via SmithApps = 6</li>
+<li>Datastream Advance = 6</li>
 <li>WRDS (Wharton Research Data Service) = 7</li>
 </ul>
 <h3>Stocks</h3>
@@ -1231,16 +1231,16 @@
 <li>ValueLine (ValueLine Investment Survey) = 2</li>
 <li>Factiva = 3</li>
 <li>Hoovers Online = 4</li>
-<li>CRSP: Center for Research in Security Prices (Access via SmithApps - CRSPSift) = 5</li>
+<li>CRSP: Center for Research in Security Prices = 5</li>
 <li>Bloomberg = 6</li>
-<li>Datastream Advance - Access via SmithApps = 7</li>
+<li>Datastream Advance = 7</li>
 <li>WRDS (Wharton Research Data Service) = 8</li>
 <li>Big Charts = 99</li>
 <li>Institute for the Study of Security Markets (ISSM) = 99</li>
 <li>Morningstar Direct = 99</li>
 <li>Morningstar EnCorr = 99</li>
 <li>NASDAQ = 99</li>
-<li>NYSE - New York Stock Exchange = 99</li>
+<li>NYSE &ndash; New York Stock Exchange = 99</li>
 <li>Standard &amp; Poor's Net Advantage = 99</li>
 <li>Standard &amp; Poor's = 99</li>
 <li>Thomson Reuters Eikon = 99</li>
@@ -1313,7 +1313,7 @@
 <h3>Transportation Modes</h3>
 <ul>
 <li>Freight World = 1</li>
-<li>PortFocus - Ports Harbours Marinas Worldwide = 2</li>
+<li>PortFocus: Ports Harbours Marinas Worldwide = 2</li>
 <li>RAILIndustry.com = 3</li>
 <li>TIDE'S Directory of Transportation Information = 4</li>
 </ul>
@@ -1323,7 +1323,7 @@
 </ul>
 <h3>Venture Capital</h3>
 <ul>
-<li>PricewaterhouseCoopers - MoneyTree Report = 99</li>
+<li>PricewaterhouseCoopers: MoneyTree Report = 99</li>
 </ul>
 <h3>Volunteerism</h3>
 <ul>
