--- a/output/Com.html
+++ b/output/Com.html
@@ -1,12 +1,9 @@
-
-<p><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip,uid&profile=ehost&defaultdb=aph'>Academic Search Premier</a></p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip,uid&profile=ehost&defaultdb=aph'>Academic Search Premier</a></b></p>
 <p>Very broad coverage, includes many topics of interest to business researchers.</p>
-
-<p><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/Hoovers'>Hoovers Online</a></p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/Hoovers'>Hoovers Online</a></b></p>
 <p>Provides comprehensive Company and Industry profiles, in-depth financials, Company overviews and histories, information on competitors, Products, services and operations. "Build a List" option allows screening for companies based on several variables.</p>
-
-<p><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip&group=main&profile=ehost&defaultdb=bth'>Business Source Complete</a></p>
-<p>Comprehensive database of business sources - includes over 3600 peer reviewed journals, trade publications/ magazines, books, case studies, Company profiles, SWOT analysis etc.</p>
-
-<p><a href='http://proxy-um.researchport.umd.edu/login?url=http://global.factiva.com/en/sess/login.asp?xsid=S003Wvf1WFo5DEs5DEmM9YuNTAvODFyMHmnRsIuMcNG1pRRQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQQAA'>Factiva</a></p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip&group=main&profile=ehost&defaultdb=bth'>Business Source Complete</a></b></p>
+<div style='font-size: 90%'><p><em>Note: To access Company Profiles, click on link from the "More" option menu top of screen (in the blue band) to search for Company profiles by Company name.</em></p></div>
+<p>Comprehensive database of business sources &mdash; includes over 3600 peer reviewed journals, trade publications, magazines, books, case studies, Company profiles, SWOT analysis, etc.</p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://global.factiva.com/en/sess/login.asp?xsid=S003Wvf1WFo5DEs5DEmM9YuNTAvODFyMHmnRsIuMcNG1pRRQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQQAA'>Factiva</a></b></p>
 <p>From Dow Jones. Provides full text access to over 8,000 business sources including national and international newspapers, magazines, wire services, web sites and Industry (trade) sources. Includes coverage of the Wall Street Journal. NOTE: Licensing restrictions limit use to 12 simlutaneous users. If you are unable to access this database, please try again later.</p>
