added alpha menu features
added alpha menu generation to keyword list; converted alpha menu
generation to function

--- a/output/rel-com.html
+++ b/output/rel-com.html
@@ -1,6 +1,7 @@
 <h3>Related Topics</h3>
 <ul>
 <li><a href='/vbic/keywords#analystreports'>Analyst Reports</a></li>
+<li><a href='/vbic/keywords#annualreports'>Annual Reports</a></li>
 <li><a href='/vbic/keywords#companyprofiles'>Company Profiles</a></li>
 <li><a href='/vbic/keywords#competitors'>Competitors</a></li>
 <li><a href='/vbic/keywords#financialinformation'>Financial information</a></li>
