--- a/output/res-by-title.html
+++ b/output/res-by-title.html
@@ -104,6 +104,7 @@
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://institution.gallup.com'>Gallup Brain</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=https://researchport.umd.edu/shib/CP/Gartner/gartner.cgi'>Gartner Group</a></li>
+<li><a href='http://www.asaecenter.org/Community/Directories/AssociationSearch.cfm'>Gateway to Associations - American Society of Association Executives (ASAE)</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://databank.worldbank.org/ddp/home.do?Step=12&id=4&CNO=2'>Global Development Finance</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://externalization.worldbank.org/external/default/main?contentMDK=21119307&menuPK=2880787&pagePK=64691887&piPK=64691875&theSitePK=2880771'>Global Economic Monitor (GEM)</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://myinsight.globalinsight.com/servlet/cats?pageContent=home&imask=1'>Global Insight (IHS) DataInsight Web</a> <div style='font-size: 90%'>[<em>Note: If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu.</em>]</div></li>
@@ -136,6 +137,7 @@
 <li><a href='http://cyborlink.com/besite/'>International Business, Etiquette and Manners</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.worldbank.org/data/icp'>International Comparison Program</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.imfstatistics.org'>International Financial Statistics</a></li>
+<li><a href='http://www.ipl.org/div/aon/'>Internet Public Library Associations on the Net</a> <div style='font-size: 90%'>[<em>Note: [The Regents of the University of Michigan] </em>]</div></li>
 </ul>
 <div style='font-size: 80%'><p>[<a href='#'>back to top</a>]</p></div>
 <h3 id='J'>J</h3>
@@ -252,6 +254,7 @@
 <div style='font-size: 80%'><p>[<a href='#'>back to top</a>]</p></div>
 <h3 id='T'>T</h3>
 <ul>
+<li><a href='http://www.scholarly-societies.org/'>The Scholarly Societies Project</a> <div style='font-size: 90%'>[<em>Note: [University of Waterloo Library]</em>]</div></li>
 <li><a href='http://www.taxpolicycenter.org/'>Tax Policy Center</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://infotrac.galegroup.com/itweb/umd_um?db=TERC'>Testing and Education Reference Center</a></li>
 <li><a href='http://www.thomasnet.com/'>ThomasNet</a></li>
@@ -263,6 +266,7 @@
 <li>Thomson Reuters Mutual Fund Holdings <div style='font-size: 90%'>[<em>Note: Access via WRDS. Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Access is available by account only &mdash; request account at <a href='https://wrds.wharton.upenn.edu'>https://wrds.wharton.upenn.edu</a></em>]</div></li>
 <li><a href='http://users.cs.jmu.edu/bernstdh/web/tide/index.html'>TIDE'S Directory of Transportation Information</a></li>
 <li><a href='http://www.trade.gov/mas/ian/build/groups/public/@tg_ian/documents/webcontent/tg_ian_003364.pdf'>Top U.S. Trading Partners</a></li>
+<li><a href='http://dir.yahoo.com/Regional/U_S__States/Washington__D_C_/Business_and_Shopping/Business_to_Business/Trade/Trade_Associations/'>Trade Association - Washington, DC in the Yahoo Directory</a></li>
 </ul>
 <div style='font-size: 80%'><p>[<a href='#'>back to top</a>]</p></div>
 <h3 id='U'>U</h3>
