--- a/output/summary_cats.html
+++ b/output/summary_cats.html
@@ -1,14 +1,17 @@
 <h1>List of All Categories</h1>
 <h2>Career</h2>
 <ul>
-<li>Business Source Complete = 1</li>
-</ul>
-<h2>Company</h2>
-<ul>
-<li>Academic Search Premier = 1</li>
-<li>Hoovers Online = 2</li>
-<li>Business Source Complete = 3</li>
+<li>Occupational Outlook Handbook = 1</li>
+<li>Business Source Complete = 2</li>
+<li>IBIS World = 3</li>
 <li>Factiva = 4</li>
+<li>Testing and Education Reference Center = 5</li>
+</ul>
+<h2>Company Information</h2>
+<ul>
+<li>Hoovers Online = 1</li>
+<li>Business Source Complete = 2</li>
+<li>Factiva = 3</li>
 </ul>
 <h2>Country Research</h2>
 <ul>
